
option java_outer_classname="GetLoggingInfoCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;

message GetLoggingInfoCommand 
{
	optional int64 requestId = 1;
}